Fixed alignment for close button in tabs.

--- a/css/tabs.less
+++ b/css/tabs.less
@@ -79,7 +79,7 @@
       width: 18px;
       position: relative;
       margin-left: 4px;
-      padding-right: 4px;
+      padding: 0 4px 0 0;
       cursor: pointer;
       
       &:hover {
